public/css/admin.css
    @font-face {
        font-family: Fonttype;
        src: url("/fonts/static/Raleway-Regular.ttf");
    }
    
    * {
        margin: 0;
        padding: 0;
    }
    
    #container {
        display: grid;
        height: 100vh;
        width: 100%;
        grid-template-columns: 20% 80%;
        grid-template-rows: 10% 90%;
    }
    
    body {
        overflow-x: hidden;
    }
    
    #control-panel-placeholder {
        background-color: #00394f;
        box-shadow: 0 1px 10px 0 rgb(0, 0, 0, .6);
        border: 1px solid black;
        grid-column: 1 / 2;
        grid-row: 1 / 3;
        display: grid;
        grid-template-columns: 100%;
        grid-template-rows: 15% 10% 10%;
    }
    
    #control-panel-header {
        text-align: center;
        color: white;
        align-self: center;
        padding-top: 5%;
    }
    
    #control-panel {
        display: grid;
    }
    
    #userTable {
        text-align: center;
    }
    
    #dialog-confirm {
        display: none;
    }
    
    #table-container {
        display: grid;
        margin: 3%;
        overflow-y: scroll;
    }
    
    .page-header {
        text-align: center;
        padding: 3%;
    }
    
    tr:nth-child(odd) {
        background-color: rgb(245, 245, 245);
    }
    
    th {
        background-color: #00394f;
        color: white;
        height: 40px;
    }
    
    .manage {
        display: flex;
        justify-content: space-around;
        align-content: center;
        padding-top: 25%;
    }
    
    .remove {
        align-self: center;
        justify-self: center;
        grid-row: 2 / 3;
    }
    
    .view {
        align-self: center;
        justify-self: center;
        grid-row: 2 / 3;
    }
    
    button {
        text-align: center;
        white-space: nowrap;
        height: 40px;
        font-size: 16px;
        border-style: none;
        background-color: rgb(14, 76, 109);
        color: white;
        border-radius: 7px;
        padding-top: 2%;
        padding-bottom: 2%;
        padding-left: 10%;
        padding-right: 10%;
        cursor: pointer;
        transition-duration: 0.7s;
        font-family: 'Fonttype';
    }
    
    button:active {
        transform: translateY(4px);
    }
    
    .admin-buttons {
        cursor: pointer;
        background: none;
        outline: inherit;
        color: white;
        font-family: 'Fonttype';
        margin-top: 1%;
    }
    
    .admin-buttons:hover {
        color: rgb(114, 186, 213);
    }
    
    td {
        height: 60px;
    }
    
    td.manage {
        height: 100%;
        vertical-align: text-bottom;
    }
    
    .dropdown {
        display: none;
    }
    
    #dropdown-items {
        display: grid;
        justify-content: center;
    }
    
    #update-confirm {
        display: none;
    }
    
    #close {
        float: right;
        top: 0;
    }
    
    #ui-id-1 {
        font-family: 'Fonttype';
        color: black;
    }
    
    .ui-dialog-titlebar.ui-corner-all.ui-widget-header.ui-helper-clearfix.ui-draggable-handle {
        color: rgb(245, 245, 245);
    }
    
    #dialog-confirm.ui-dialog-content.ui-widget-content {
        margin-top: 10% !important;
        display: flex !important;
        align-items: center !important;
        justify-content: center !important;
    }
    
    .ui-icon.ui-icon-alert {
        margin-top: 1% !important;
    }
    
    .ui-button.ui-corner-all.ui-widget.ui-button-icon-only.ui-dialog-titlebar-close {
        display: none;
    }
    
    .ui-button.ui-corner-all.ui-widget {
        font-family: 'Fonttype';
        color: white;
        background-color: rgb(14, 76, 109);
        border-style: none;
        border-radius: 7px;
        transition-duration: 0.7s;
    }
    
    .ui-button.ui-corner-all.ui-widget:hover {
        background-color: rgb(114, 186, 213);
    }
    
    .ui-button.ui-corner-all.ui-widget:active {
        transform: translateY(4px);
    }
    
    @media only screen and (max-width: 720px) {
        #container {
            grid-template-columns: 100%;
            grid-template-rows: auto;
            overflow-x: scroll;
            width: 100vw;
        }
        #control-panel-header {
            text-align: center;
            color: white;
            align-self: center;
            padding-top: 5%;
        }
        #control-panel-placeholder {
            grid-row: 1 / 2;
            display: flex;
            padding: 5%;
            justify-content: center;
            text-align: center;
            width: 100%;
            min-width: 420px;
        }
        .page-header {
            grid-row: 2 / 3;
            font-size: 20px;
        }
        #table-container {
            grid-row: 3 / 4;
            padding: 0;
            margin: 0;
            padding-bottom: 10%;
            width: 100%;
            object-fit: cover;
            display: grid;
            grid-template-columns: 100%;
            grid-template-rows: auto;
            font-size: 14px;
            overflow-y: visible;
        }
        .manage {
            display: flex;
            flex-direction: column;
            min-height: 150px;
            max-width: 100px;
            padding-top: 0;
        }
        .undelete {
            align-self: center;
            justify-self: center;
            grid-row: 2 / 3;
        }
        .remove {
            align-self: center;
            justify-self: center;
            grid-row: 2 / 3;
        }
        .view {
            align-self: center;
            justify-self: center;
            grid-row: 2 / 3;
        }
        button {
            text-align: center;
            white-space: nowrap;
            height: 40px;
            font-size: 12px;
            border-style: none;
            background-color: rgb(14, 76, 109);
            color: white;
            border-radius: 7px;
            padding-top: 2%;
            padding-bottom: 2%;
            padding-left: 10%;
            padding-right: 10%;
        }
        .dropdown {
            display: inline-block;
            font-size: 24px;
            cursor: pointer;
        }
        #dropdown-items {
            opacity: 0;
            height: 0px;
            display: none;
        }
        th {
            word-wrap: break-word;
        }
        input {
            max-width: 100px;
        }
        .admin-buttons {
            font-size: 16px;
        }
    }

